[gd_scene load_steps=8 format=3 uid="uid://fqxurxh6g1x3"]

[ext_resource type="Script" path="res://Scenes/Cell/Scripts/Cell.gd" id="1_n3kt6"]
[ext_resource type="ArrayMesh" uid="uid://7o4544q06m37" path="res://Scenes/Cell/Meshes/SM_GamePieceLevel1.res" id="2_q4bs6"]
[ext_resource type="ArrayMesh" uid="uid://uoxus3hsl32g" path="res://Scenes/Cell/Meshes/SM_GamePieceLevel2.res" id="3_q5u8v"]
[ext_resource type="ArrayMesh" uid="uid://deflndxccojoc" path="res://Scenes/Cell/Meshes/SM_GamePieceLevel3.res" id="4_uyek4"]
[ext_resource type="ArrayMesh" uid="uid://bbbmrkfuy0bcj" path="res://Scenes/Cell/Meshes/SM_GamePieceLevel4.res" id="5_cfpbd"]
[ext_resource type="Material" path="res://Materials/YellowEdges.tres" id="6_owot8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tshw0"]
albedo_color = Color(0.482353, 0.0862745, 0.341176, 1)

[node name="Cell" type="Node3D"]
script = ExtResource("1_n3kt6")
powerLevel = 3
color = Color(0.482353, 0.0862745, 0.341176, 1)

[node name="Piece" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.3, 0)

[node name="Level1" type="MeshInstance3D" parent="Piece"]
visible = false
material_override = SubResource("StandardMaterial3D_tshw0")
mesh = ExtResource("2_q4bs6")

[node name="Level2" type="MeshInstance3D" parent="Piece"]
visible = false
material_override = SubResource("StandardMaterial3D_tshw0")
mesh = ExtResource("3_q5u8v")

[node name="Level3" type="MeshInstance3D" parent="Piece"]
material_override = SubResource("StandardMaterial3D_tshw0")
mesh = ExtResource("4_uyek4")

[node name="Level4" type="MeshInstance3D" parent="Piece"]
visible = false
material_override = SubResource("StandardMaterial3D_tshw0")
mesh = ExtResource("5_cfpbd")

[node name="Base" type="Node3D" parent="."]

[node name="BaseMesh" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.01, 0, -1, -4.37114e-10, 0, 0, 0)
material_override = ExtResource("6_owot8")
mesh = ExtResource("5_cfpbd")
